kubernetes-manifests/payment-service/envoy/envoy.yml
static_resources:
  listeners:
    - name: http_listener
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
                - name: envoy.filters.http.router
              stat_prefix: ingress_http
              codec_type: auto
              route_config:
                name: http_route
                virtual_hosts:
                  - name: payment_service
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: payment_cluster
  clusters:
    - name: payment_cluster
      connect_timeout: 0.25s
      lb_policy: round_robin
      load_assignment:
        cluster_name: payment_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8080
